# ADTs

./: Makefile  README.md  bqtest.c  bqueue.h  genmakefile.sh  manifest  treeset.h  uqtest.c
doc/: GlasgowADTlibrary.docx
src/: Makefile.am  arraylist.h  bqueue.c  bqueue.h  hashmap.c  hashset.c  hashset.h  iterator.c  iterator.h  linkedlist.c  linkedlist.h  treeset.c  treeset.h  tsbqueue.c  tsbqueue.h  tsiterator.c  tsiterator.h  tslinkedlist.c  tslinkedlist.h  tsuqueue.c  tsuqueue.h  uqueue.c  uqueue.h
