##########################################################################################
AUTOMAKE_OPTIONS = foreign subdir-objects
ACLOCAL_FLAGS = -I m4

lib_LTLIBRARIES = libADTs.la

srpcincludedir = $(includedir)/adts
srpcinclude_HEADERS = arraylist.h bqueue.h hashmap.h iterator.h linkedlist.h treeset.h tsarraylist.h tsbqueue.h tshashmap.h tsiterator.h tslinkedlist.h tstreeset.h tsuqueue.h uqueue.h

libADTs_la_SOURCES = iterator.c arraylist.c linkedlist.c hashmap.c bqueue.c uqueue.c treeset.c tsiterator.c tsarraylist.c tslinkedlist.c tshashmap.c tsbqueue.c tstreeset.c tsuqueue.c

